Add extra classes for TinyMCE text alignment

--- a/themes/default/scss/includes/_typography.scss
+++ b/themes/default/scss/includes/_typography.scss
@@ -108,15 +108,18 @@ body {
 /* TinyMCE alignment
 ---------------------------------------------------------------------------------- */
 
-	.left {
+	.left,
+	.text-left {
 		text-align: left;
 	}
 
-	.center {
+	.center,
+	.text-center {
 		text-align: center;
 	}
 
-	.right {
+	.right,
+	.text-right {
 		text-align: right;
 	}
 
