Update .h-hide-visually CSS rules

--- a/themes/default/scss/includes/_utils.scss
+++ b/themes/default/scss/includes/_utils.scss
@@ -20,6 +20,8 @@
 	padding: 0;
 	border: 0;
 	clip: rect(0 0 0 0);
+	clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
+	white-space: nowrap;
 }
 
 /* Clearfix - Assign class to element to self clear children
