--- a/themes/default/src/scss/style.scss
+++ b/themes/default/src/scss/style.scss
@@ -4,7 +4,7 @@
 @import 'includes/typography';
 @import 'includes/mixins';
 @import 'includes/utils';
-@import 'susy/sass/susy';
+//@import 'susy/sass/susy';
 
 /* Layout
 ---------------------------------------------------------------------------------- */
