Improvements to 'Site Settings' admin panel

--- a/app/css/cms.css
+++ b/app/css/cms.css
@@ -1,22 +1,7 @@
 /* CMS tweaks
 -------------------------------------------------------------------------------- */
 
+/* Hide page types that can't be created */
 #Form_AddForm_PageType .disabled {
 	display: none !important;
-}
-
-#Menu-ReportAdmin {
-	display: none !important;
-}
-
-.icon.icon-16 {
-	background-size: 16px auto;
-}
-
-.checkboxleft {
-	padding-left: 0 !important;
-}
-
-.checkboxleft label {
-	font-weight: bold !important;
 }
