Add accessible default form templates/styles

--- a/themes/default/src/scss/includes/_variables.scss
+++ b/themes/default/src/scss/includes/_variables.scss
@@ -5,7 +5,12 @@ $color__white: #fff;
 $color__black: #000;
 $color__black--alt: #333;
 
-$font__head: verdana, sans-serif;
-$font__head--alt: 'Trebuchet MS', verdana, sans-serif;
+$color__form-description: #505a5f;
+$color__form-good: #00703c;
+$color__form-bad: #d4351c;
+$color__form-warning: #fd0;
+$color__form-info: #1d70b8;
+$color__form-focus: #1d70b8;
 
-$font__body: verdana, sans-serif;
+$font__head: arial, verdana, sans-serif;
+$font__body: arial, verdana, sans-serif;
