Made the following changes: - Added Elemental and updated the Page.ss layout to use this. - Removed site settings admin and moved it to Settings - Added Head and footer scripts to Settings - Removed Tagline from Settings - Added Blog Post extension for removing Summary from the accordion - Added grouped cms menus and added archive, redirected urls and settings to "Site settings".

--- a/app/css/cms.css
+++ b/app/css/cms.css
@@ -11,3 +11,90 @@
 #Menu-SilverStripe-Reports-ReportAdmin {
 	display: none !important;
 }
+
+/* Fixes for grouped CMS menu */
+.cms-menu__list .child-flyout-indicator {
+	display: none !important;
+}
+
+.cms-menu__list li.children > a > .text {
+	margin-right: 34px;
+}
+
+.cms-menu__list li.children.current > a:hover,
+.cms-menu__list li.children.opened a:hover {
+	background-color: #d8e4eb;
+}
+
+.cms-menu__list li.children a .toggle-children {
+	inset: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+}
+
+.cms-menu__list li.children a .toggle-children .toggle-children-icon {
+	display: none;
+}
+
+.cms-menu__list li.children a .toggle-children:hover {
+	background: rgba(85, 137, 167, 0.15);
+}
+
+.cms-menu__list li.children a .toggle-children:after {
+	font-family: silverstripe !important;
+	font-style: normal !important;
+	font-weight: 400 !important;
+	font-variant: normal !important;
+	text-transform: none !important;
+	speak: none;
+	line-height: 26px;
+	-webkit-font-smoothing: antialiased;
+	content: '(';
+	position: absolute;
+	top: 50%;
+	right: 8px;
+	width: 26px;
+	height: 26px;
+	border-radius: 2px;
+	margin-top: -1px;
+	padding-top: 0;
+	font-size: 17px;
+	text-align: center;
+	line-height: 26px;
+	transform: translateY(-50%);
+}
+
+.cms-menu__list li.children a .toggle-children.opened:after {
+	content: '*';
+}
+
+.cms-menu__list li.children ul.collapsed-flyout {
+	margin-top: -52px;
+}
+
+.cms-menu__list.collapsed .opened .child-flyout-indicator {
+	display: none !important;
+}
+
+.cms-menu__list.collapsed .opened ul.collapsed-flyout li.clone {
+	display: none !important;
+}
+
+.cms-menu__list.collapsed .opened ul.collapsed-flyout li a {
+	padding-right: 8px;
+	padding-left: 8px;
+}
+
+.cms-menu__list .menu__icon {
+	left: 13px;
+}
+
+.cms-menu__list span.text {
+	margin-left: 23px;
+}
+
+fieldset.grid.grid-field.ss-gridfield.field {
+	margin-bottom: 2em !important;
+}
