--- a/themes/default/src/scss/includes/_variables.scss
+++ b/themes/default/src/scss/includes/_variables.scss
@@ -1,16 +1,16 @@
 /* SCSS Variables
 ---------------------------------------------------------------------------------- */
 
-$color__white: #fff;
-$color__black: #000;
-$color__black--alt: #333;
+$white: #FFFFFF;
+$black: #000000;
+$black-alt: #333333;
 
-$color__form-description: #505a5f;
-$color__form-good: #00703c;
-$color__form-bad: #d4351c;
-$color__form-warning: #fd0;
-$color__form-info: #1d70b8;
-$color__form-focus: #1d70b8;
+$form-description: #505A5F;
+$form-good: #00703C;
+$form-bad: #D4351C;
+$form-warning: #FFDD00;
+$form-info: #1D70B8;
+$form-focus: #1D70B8;
 
-$font__head: arial, verdana, sans-serif;
-$font__body: arial, verdana, sans-serif;
+$font-head: arial, verdana, sans-serif;
+$font-body: arial, verdana, sans-serif;
