--- a/themes/default/src/scss/includes/_variables.scss
+++ b/themes/default/src/scss/includes/_variables.scss
@@ -14,3 +14,6 @@ $form-focus: #1D70B8;
 
 $font-head: arial, verdana, sans-serif;
 $font-body: arial, verdana, sans-serif;
+
+$container-width: 1168px;
+$container-padding: 20px;
