Adds full width image to list of default content blocks

--- a/themes/default/src/scss/style.scss
+++ b/themes/default/src/scss/style.scss
@@ -12,5 +12,6 @@
 }
 
 // Many styles
+@import '~@splidejs/splide/dist/css/splide.min.css';
 @import 'components/**/*.scss';
 @import 'elements/**/*.scss';
