--- a/themes/default/src/scss/components/_breadcrumbs.scss
+++ b/themes/default/src/scss/components/_breadcrumbs.scss
@@ -2,41 +2,48 @@
 ---------------------------------------------------------------------------------- */
 
 .breadcrumbs {
-	font-size: 140%;
+	font-size: 1.4rem;
 }
 
-ol.breadcrumbs__list {
+/*------------------------------------
+	List wrapper
+------------------------------------*/
+.breadcrumbs__list {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
-	gap: .33em .66em;
+	gap: 0.33em 0.66em;
 }
 
-li.breadcrumbs__item {
+/*------------------------------------
+	Item
+------------------------------------*/
+.breadcrumbs__item {
 	position: relative;
 
 	&:not(:first-child) {
 		padding-left: 1em;
 
 		&:before {
-			content: '';
-			display: block;
 			position: absolute;
-			top: 0;
-			bottom: 0;
-			left: -.25em;
-			width: .5em;
-			height: .5em;
+			top: 0; bottom: 0;
+			left: -0.25em;
+			display: block;
+			width: 0.5em; height: 0.5em;
 			margin: auto 0;
-			transform: rotate(45deg);
 			border-style: solid;
 			border-width: 1px 1px 0 0;
 			border-color: $black-alt;
+			content: '';
+			transform: rotate(45deg);
 		}
 	}
 }
 
-a.breadcrumbs__link {
+/*------------------------------------
+	Link
+------------------------------------*/
+.breadcrumbs__link {
 	color: $black;
 
 	&:link,
