Add focus colour to expanded elements in the elemental editor Removes inline_editable false

--- a/app/css/cms.css
+++ b/app/css/cms.css
@@ -98,3 +98,8 @@
 fieldset.grid.grid-field.ss-gridfield.field {
 	margin-bottom: 2em !important;
 }
+
+.element-editor .element-editor__element--expandable[draggable="false"] {
+	transition: 300ms ease-in-out background-color;
+	background-color: #d8e4eb !important;
+}
