--- a/app/css/cms.css
+++ b/app/css/cms.css
@@ -99,7 +99,8 @@ fieldset.grid.grid-field.ss-gridfield.field {
 	margin-bottom: 2em !important;
 }
 
-.element-editor .element-editor__element--expandable[draggable="false"] {
+.element-editor .element-editor__element--expandable[draggable="false"]:focus,
+.element-editor .element-editor__element--expandable[draggable="false"]:focus-within {
 	transition: 300ms ease-in-out background-color;
-	background-color: #d8e4eb !important;
+	background-color: #e9f0f4 !important;
 }
