--- a/themes/default/src/scss/editor.scss
+++ b/themes/default/src/scss/editor.scss
@@ -1,7 +1,6 @@
 /* For CMS HtmlEditorField
 ---------------------------------------------------------------------------------- */
 
-@import 'includes/normalize';
-@import 'includes/variables';
-@import 'includes/typography';
-
+@use 'includes/normalize';
+@use 'includes/variables';
+@use 'includes/typography';
