--- a/themes/default/src/scss/includes/_variables.scss
+++ b/themes/default/src/scss/includes/_variables.scss
@@ -1,9 +1,20 @@
-/* SCSS Variables
+/* Glocal CSS Variables
 ---------------------------------------------------------------------------------- */
 
-$white: #FFFFFF;
-$black: #000000;
-$black-alt: #333333;
+/*------------------------------------
+	Colours
+------------------------------------*/
+:root {
+	--white: #fff;
+	--black: #000;
+}
+
+/*------------------------------------
+	Fonts
+------------------------------------*/
+:root {
+	--font-family: arial, verdana, sans-serif;
+}
 
 $form-description: #505A5F;
 $form-good: #00703C;
