--- a/themes/default/src/scss/components/_breadcrumbs.scss
+++ b/themes/default/src/scss/components/_breadcrumbs.scss
@@ -33,7 +33,7 @@
 			margin: auto 0;
 			border-style: solid;
 			border-width: 1px 1px 0 0;
-			border-color: $black-alt;
+			border-color: var(--black);
 			content: '';
 			transform: rotate(45deg);
 		}
@@ -44,7 +44,7 @@
 	Link
 ------------------------------------*/
 .breadcrumbs__link {
-	color: $black;
+	color: var(--black);
 
 	&:link,
 	&:visited {
